--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Vite App</title>
   </head>
   <body>
-    <canvas data-canvas class="canvas"></canvas>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
